# sistema-electoral-transparente-peru

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-push
.github/agents/: release-checker.agent.md
.github/instructions/: backend-layering.instructions.md  migrations-safety.instructions.md
alembic/: env.py
alembic/versions/: 20260502_0001_auth_jwt_otp.py  20260502_0002_add_user_telegram_chat_id.py  20260502_0003_user_roles.py  20260504_0004_cedula_electoral.py
docs/: ARCHITECTURE.md  TODO.md
docs/done/: auth-jwt-2fa-email-telegram.md  cedula-electoral-cloudflare-r2.md  roles-permisos-rbac-abac.md
plans/: 01-vision-y-principios.md  02-arquitectura-backend-python.md  03-seguridad-identidad-criptografia.md  04-modelo-datos-versionado-hash.md  05-flujo-operativo-estados-acta.md  06-validadores-distribucion-auditoria.md  07-operacion-devsecops-observabilidad.md  08-roadmap-riesgos-gobernanza.md  09-panel-administracion-roles-y-cedula.md
src/election_system/: __init__.py  main.py
src/election_system/api/dependencies/: auth.py
src/election_system/api/v1/: router.py
src/election_system/application/: ports.py
src/election_system/application/services/: auth_service.py  cedula_service.py  (+3 more)
src/election_system/core/: config.py  exceptions.py  logging.py  security.py
src/election_system/domain/: models.py  rules.py
src/election_system/workers/: events_worker.py
tests/: test_cedula_domain.py  test_cedula_routes.py  test_health.py  test_security.py
(+23 files in other folders)
